--- a/style.css
+++ b/style.css
@@ -53,6 +53,15 @@
   #comp-score {
     font-size: 4rem;
   }
+
+  #computer,
+  #You{
+    font-size: 3rem;
+    border: 2px solid black;
+    border-radius: 1rem;
+    background-color: blueviolet;
+    color: #081b31;
+  }
   
   .msg-container {
     margin-top: 5rem;
