--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
   img {
     height: 150px;
     width: 150px;
-    object-fit: cover;
+    /*object-fit: cover;*/
     border-radius: 50%;
   }
   
